# deskbench

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  BUILDSEQUENCE.md  BUILD_LOG.md  BUILD_PLAN.md  DASHBOARD_SPEC.md  DESKBENCH_AUDIT.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: build-status.yml  ci.yml
config/: models.yaml
deskbench/: __init__.py  analyzer.py  cli.py  grader.py  registry.py  runner.py  schemas.py  visualize.py
docs/: adding-a-model.md  adding-a-task.md  methodology.md
docs/adr/: ADR-000-custom-pipeline-vs-inspect.md  ADR-001-files-on-disk-over-database.md  ADR-002-judge-prompt-and-independence.md  ADR-003-benchmark-as-a-function.md
report/: REPORT.md
results/: summary.json
results/human/: GRADING_SHEET.manifest.json  GRADING_SHEET.md  T01-inbox-triage__gemini-flash__run0.json  T01-inbox-triage__gemini-flash__run1.json  T01-inbox-triage__gemini-flash__run2.json  T01-inbox-triage__glm-4.7-flash__run0.json  T01-inbox-triage__glm-4.7-flash__run1.json  T01-inbox-triage__glm-4.7-flash__run2.json  T01-inbox-triage__gpt-oss-20b-free__run0.json  T01-inbox-triage__gpt-oss-20b-free__run1.json  T01-inbox-triage__gpt-oss-20b-free__run2.json  T01-inbox-triage__llama-3.3-70b__run0.json  T01-inbox-triage__llama-3.3-70b__run1.json  T01-inbox-triage__llama-3.3-70b__run2.json  T01c-inbox-triage__gemini-flash__run0.json  T01c-inbox-triage__gemini-flash__run1.json  T01c-inbox-triage__gemini-flash__run2.json  T01c-inbox-triage__glm-4.7-flash__run0.json  T01c-inbox-triage__glm-4.7-flash__run1.json  T01c-inbox-triage__glm-4.7-flash__run2.json  T01c-inbox-triage__gpt-oss-20b-free__run0.json  T01c-inbox-triage__gpt-oss-20b-free__run1.json  T01c-inbox-triage__gpt-oss-20b-free__run2.json  T01c-inbox-triage__llama-3.3-70b__run0.json  T01c-inbox-triage__llama-3.3-70b__run1.json  T01c-inbox-triage__llama-3.3-70b__run2.json  T02-spreadsheet-reconciliation__gemini-flash__run0.json  T02-spreadsheet-reconciliation__gemini-flash__run1.json  T02-spreadsheet-reconciliation__gemini-flash__run2.json  T02-spreadsheet-reconciliation__glm-4.7-flash__run0.json  T02-spreadsheet-reconciliation__glm-4.7-flash__run1.json  T02-spreadsheet-reconciliation__glm-4.7-flash__run2.json  T02-spreadsheet-reconciliation__gpt-oss-20b-free__run0.json  T02-spreadsheet-reconciliation__gpt-oss-20b-free__run1.json  T02-spreadsheet-reconciliation__gpt-oss-20b-free__run2.json  T02-spreadsheet-reconciliation__llama-3.3-70b__run0.json  T02-spreadsheet-reconciliation__llama-3.3-70b__run1.json  T02-spreadsheet-reconciliation__llama-3.3-70b__run2.json  T02c-spreadsheet-reconciliation__gemini-flash__run0.json  (+11 more)
scripts/: build_human_sheet.py  build_status.py  gen_t02.py  ingest_human_grades.py  saturation_check.py  verify_t02.py
site/: .gitkeep  index.html
tests/: test_analyzer.py  test_build_status.py  test_grader.py  test_registry.py  test_runner.py  test_saturation.py  test_schemas.py  test_tasks.py  test_visualize.py
(+133 files in other folders)
