[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deskbench"
version = "0.1.0"
description = "A rigorously graded benchmark for messy real-world office work"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DeskBench" }]
keywords = ["evaluation", "benchmark", "llm", "evals", "office-work"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.6,<3",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/NewAi25/deskbench"
Repository = "https://github.com/NewAi25/deskbench"

[project.scripts]
deskbench = "deskbench.cli:app"

[tool.setuptools]
packages = ["deskbench"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["site", "results"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's declarative API intentionally calls Option()/Argument() in defaults.
"deskbench/cli.py" = ["B008"]
# The dashboard HTML/JS template embeds long markup lines by nature.
"deskbench/visualize.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
